@@ -3,7 +3,7 @@
 <center>
 <h2><font color="#000000">{matrix_action}</font></h2>
 
-<form action="{action_url}" method="post" name="matrixform" target="viewmatrix">
+<form target="viewmatrix" action="{action_url}" method="post" name="matrixform">
 <table border="0" width="75%">
 <!-- END matrix_query_begin -->
 
@@ -11,9 +11,8 @@
 
 <!-- BEGIN matrix_query_end -->
 </table>
+<input type="submit" value="{submit_button}">
 </form>
-{submit_button}
-
 {cancel_button}
 </center>
 <!-- END matrix_query_end -->
